<resources>
    <string name="app_name">마포유스</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_youth">청소년활동</string>
    <string name="title_volunteer">봉사활동</string>
    <string name="title_edu">평생교육</string>
    <string name="title_donation">재능기부</string>
    <string name="title_home">홈</string>

    <string name="all">전체</string>

    <string name="btn_apply">참여 신청하기</string>
    <string name="detail_notice">※ 해당 정보는 운영기관에서 직접 등록하였으며 문의 및 신청은 기관전화번호를 참고하세요.</string>
    <string name="search_hint">원하는 서비스를 찾아보세요</string>
    <string name="search_background_hint">검색 내용을 입력해주세요.</string>
    <string name="details_btn"><u>자세히보기</u></string>
    <string name="random_url"><u>https://devuryu.tistory.com/284</u></string>


    <!--donation tab-->
    <string name="dona_sub">원하는 재능기부를 선택하세요.</string>
    <string name="dona_design">디자인</string>
    <string name="dona_language">번역/외국어</string>
    <string name="dona_life">생활</string>
    <string name="dona_music">음악/영상</string>
    <string name="dona_develop">프로그램 개발</string>
    <string name="dona_doc">문서작성</string>
    <string name="dona_business">마케팅/비지니스</string>
    <string name="onboard_skip_btn_text">건너뛰기</string>
    <string name="onboard_screen_title01">청소년들이 필요한 정보들을\n마포유스에서 한번에!</string>
    <string name="onboard_screen_content01">사이트는 많은데\n어디에서 봐야할지 고민했나요?\n이젠 마포유스에서 한번에 확인하세요!</string>
    <string name="onboard_finish_btn_text">완료</string>
    <string name="onboard_screen_title02">내 지역의 청소년 활동과 \n재능기부를 간편하게!</string>
    <string name="onboard_screen_content02">내 지역에서 재능기부하고 싶었거나\n원하는 재능 기부가 있으신가요?\n마포유스에서 간편하게 신청하세요!</string>
    <string name="onboard_screen_title03">마포유스에서 평생교육도\n한 눈에 쉽게!</string>
    <string name="onboard_screen_content03">마포유스를 통해 청소년활동뿐 만아니라\n학부모 활동까지 한 눈에 확인하세요!</string>


    <array name="youth_category">
        <item>전체보기</item>
        <item>건강/스포츠</item>
        <item>모험개척</item>
        <item>역사탐방</item>
        <item>봉사협력</item>
        <item>과학정보</item>
        <item>진로탐구</item>
        <item>자기개발</item>
        <item>문화예술</item>
        <item>환경보존</item>
        <item>교류</item>
        <item>기타</item>
    </array>

    <array name="spinner_list">
        <item>전체</item>
        <item>초등학생</item>
        <item>중학생</item>
        <item>고등학생</item>
        <item>대학생</item>
        <item>일반</item>
    </array>

    <array name="volunteer_category">
        <item>전체보기</item>
        <item>지도(교육)봉사</item>
        <item>노력봉사</item>
        <item>문화봉사</item>
        <item>재능봉사</item>
        <item>헌혈봉사</item>
    </array>

</resources>