<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/SettingFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/youthFragment"
        android:icon="@drawable/ic_youth"
        android:title="@string/title_youth" />
    <item
        android:id="@+id/volunteerFragment"
        android:icon="@drawable/ic_volunteer"
        android:title="@string/title_volunteer" />
    <item
        android:id="@+id/eduFragment"
        android:icon="@drawable/ic_edu"
        android:title="@string/title_edu" />
    <item
        android:id="@+id/donationFragment"
        android:icon="@drawable/ic_donation"
        android:title="@string/title_donation" />
</menu>