<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboard.screens.OnboardFirstScreen">

    <TextView
        android:id="@+id/btnSkipScreen01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/onboard_skip_btn_text"
        android:textColor="@color/search_outline"
        android:textStyle="bold"
        android:textSize="@dimen/item_onboard_skip_btn_textsize"
        android:layout_marginTop="@dimen/item_onboard_skip_btn_margintop"
        android:layout_marginEnd="@dimen/item_onboard_skip_btn_marginend"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/onboard_screen_indicator"
        android:layout_marginBottom="@dimen/margin_12dp">

        <ImageView
            android:id="@+id/onboard_screen_img01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_screen01"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/onboard_screen_indicator"
        android:layout_width="44dp"
        android:layout_height="8dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/item_onboard_indicator_margintop" />

    <TextView
        android:id="@+id/onboard_screen_title01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboard_screen_title01"
        android:textSize="@dimen/item_onboard_title_text_size"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_700"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboard_screen_indicator"
        android:layout_marginTop="@dimen/margin_24dp"/>

    <TextView
        android:id="@+id/onboard_screen_content01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboard_screen_content01"
        android:textColor="@color/onboard_content_text_color"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboard_screen_title01"
        android:layout_marginTop="@dimen/margin_20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>