<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.donation.DonationFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_top_search">

            <TextView
                android:id="@+id/textView"
                style="@style/ActionBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_donation" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/appbar"
                android:background="@drawable/bg_bottom_line">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/margin_24dp"
                        android:paddingVertical="@dimen/margin_16dp">

                        <TextView
                            android:id="@+id/subtitle"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_700"
                            android:textSize="16sp"
                            android:lineHeight="18dp"
                            android:text="@string/dona_sub" />

                        <go.kr.mapo.mapoyouth.util.customView.ToggleButtonGroupTableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/subtitle"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="@dimen/margin_16dp"
                            android:stretchColumns="*"
                            android:id="@+id/radGroup">

                            <TableRow>

                                <RadioButton
                                    android:id="@+id/sltAll"
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_span="20"
                                    android:button="@null"
                                    android:checked="true"
                                    android:textColor="@color/mapo_gray"
                                    android:fontFamily="@font/roboto_400"
                                    android:textSize="14sp"
                                    android:paddingVertical="8dp"
                                    android:background="@drawable/bg_dona_btn"
                                    android:textAlignment="center"
                                    android:text="@string/all"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/sltDesign"
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_span="25"
                                    android:layout_marginStart="6dp"
                                    android:button="@null"
                                    android:textColor="@color/mapo_gray"
                                    android:fontFamily="@font/roboto_400"
                                    android:textSize="14sp"
                                    android:paddingVertical="8dp"
                                    android:background="@drawable/bg_dona_btn"
                                    android:textAlignment="center"
                                    android:text="@string/dona_design"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/sltLanguage"
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_span="35"
                                    android:layout_marginStart="6dp"
                                    android:button="@null"
                                    android:textColor="@color/mapo_gray"
                                    android:fontFamily="@font/roboto_400"
                                    android:textSize="14sp"
                                    android:paddingVertical="8dp"
                                    android:background="@drawable/bg_dona_btn"
                                    android:textAlignment="center"
                                    android:text="@string/dona_language"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/sltLife"
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_marginStart="6dp"
                                    android:layout_span="20"
                                    android:background="@drawable/bg_dona_btn"
                                    android:button="@null"
                                    android:fontFamily="@font/roboto_400"
                                    android:paddingVertical="8dp"
                                    android:text="@string/dona_life"
                                    android:textAlignment="center"
                                    android:textColor="@color/mapo_gray"
                                    android:textSize="14sp"
                                    tools:ignore="TouchTargetSizeCheck" />
                            </TableRow>

                            <TableRow
                                android:layout_marginTop="@dimen/margin_8dp">

                                <RadioButton
                                    android:id="@+id/sltMusic"
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_span="31"
                                    android:background="@drawable/bg_dona_btn"
                                    android:button="@null"
                                    android:fontFamily="@font/roboto_400"
                                    android:paddingVertical="8dp"
                                    android:text="@string/dona_music"
                                    android:textAlignment="center"
                                    android:textColor="@color/mapo_gray"
                                    android:textSize="14sp"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/sltDevelop"
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_span="38"
                                    android:layout_marginStart="6dp"
                                    android:button="@null"
                                    android:textColor="@color/mapo_gray"
                                    android:fontFamily="@font/roboto_400"
                                    android:textSize="14sp"
                                    android:paddingVertical="8dp"
                                    android:background="@drawable/bg_dona_btn"
                                    android:textAlignment="center"
                                    android:text="@string/dona_develop"
                                    tools:ignore="TouchTargetSizeCheck" />

                                <RadioButton
                                    android:id="@+id/sltDoc"
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_span="29"
                                    android:layout_marginStart="6dp"
                                    android:background="@drawable/bg_dona_btn"
                                    android:button="@null"
                                    android:fontFamily="@font/roboto_400"
                                    android:paddingVertical="8dp"
                                    android:text="@string/dona_doc"
                                    android:textColor="@color/mapo_gray"
                                    android:textAlignment="center"
                                    android:textSize="14sp"
                                    tools:ignore="TouchTargetSizeCheck" />
                            </TableRow>

                            <TableRow
                                android:layout_marginTop="@dimen/margin_8dp">

                                <RadioButton
                                    android:id="@+id/sltBusiness"
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_span="44"
                                    android:background="@drawable/bg_dona_btn"
                                    android:button="@null"
                                    android:fontFamily="@font/roboto_400"
                                    android:paddingVertical="8dp"
                                    android:text="@string/dona_business"
                                    android:textColor="@color/mapo_gray"
                                    android:textAlignment="center"
                                    android:textSize="14sp"
                                    tools:ignore="TouchTargetSizeCheck" />

                            </TableRow>
                        </go.kr.mapo.mapoyouth.util.customView.ToggleButtonGroupTableLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@id/appbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_16dp"
                android:paddingStart="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_16dp"
                android:paddingBottom="60dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_donation_rv" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>